Incorporando intro y enlace

--- a/nosotros.html
+++ b/nosotros.html
@@ -16,6 +16,18 @@
 <body>
     <!-- Falta navbar -->
 
+    <section id="intro" class="py-5 text-center container">
+        <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 class="fw-light">¡Conocenos!</h1>
+                <p class="lead text-muted">
+                    En esta página podrás obtener más información sobre la organización detrás de esta empresa. ¡No dudes
+                    en ver nuestra misión, nuestra visión y más!
+                </p>
+            </div>
+        </div>
+    </section>
+
     <hr class="featurette-divider">
     <div class="row featurette">
         <div class="col-md-7">
@@ -104,6 +116,16 @@
     <hr class="featurette-divider">
 
     <!-- Complementar con link a un video. -->
+    <section id="areaLink" class="py-5 text-center container">
+        <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 class="fw-light">Los resultados hablan por si mismos</h1>
+                <p class="lead text-muted">Si deseas ver a uno de nuestros clientes peludos felices, <br> puedes verlo
+                    <span><a href="https://www.pexels.com/video/man-with-two-siberian-husky-7039339/">aquí</a></span>.
+                </p>
+            </div>
+        </div>
+    </section>
 
     <!-- Falta footer -->
 
