--- a/nosotros.html
+++ b/nosotros.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="nosotros.css">
+    <link rel="stylesheet" href="CSS/nosotros.css">
 </head>
 
 <body>
@@ -53,21 +53,18 @@
     <div class="row featurette">
         <div class="col-md-7 order-md-2">
 
-            <!-- Descripción precisa del objetivo del sitio empresa -->
+            <!-- Descripción precisa del objetivo de nuestra empresa -->
 
             <h2 class="featurette-heading">El objetivo de nuestra empresa.</h2>
             <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this
                 layout would work with some actual real-world content in place.</p>
         </div>
         <div class="col-md-5 order-md-1">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+            <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
                 height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa"
-                    dy=".3em">500x500</text>
-            </svg>
+                preserveAspectRatio="xMidYMid slice" focusable="false"> -->
 
+                <img src="IMG/perro feliz.jpg" alt="">
         </div>
     </div>
     <hr class="featurette-divider">
@@ -94,7 +91,7 @@
     </div>
     <hr class="featurette-divider">
     <div class="row featurette">
-        <div class="col-md-7">
+        <div class="col-md-7 order-md-2">
 
             <!-- Descripción precisa del objetivo del sitio visión -->
             <h2 class="featurette-heading">Nuestra visión.</h2>
