--- a/nosotros.html
+++ b/nosotros.html
@@ -21,7 +21,8 @@
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">¡Conocenos!</h1>
                 <p class="lead text-muted">
-                    En esta página podrás obtener más información sobre la organización detrás de esta empresa. ¡No dudes
+                    En esta página podrás obtener más información sobre la organización detrás de esta empresa. ¡No
+                    dudes
                     en ver nuestra misión, nuestra visión y más!
                 </p>
             </div>
@@ -55,25 +56,25 @@
 
             <!-- Descripción precisa del objetivo de nuestra empresa -->
 
-            <h2 class="featurette-heading">El objetivo de nuestra empresa.</h2>
+            <h2 class="featurette-heading">El objetivo de nuestra empresa.
+                <span class="text-muted">Ayudar al mejor amigo del hombre</span>
+            </h2>
             <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this
                 layout would work with some actual real-world content in place.</p>
         </div>
         <div class="col-md-5 order-md-1">
-            <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                preserveAspectRatio="xMidYMid slice" focusable="false"> -->
-
-                <img src="IMG/perro feliz.jpg" alt="">
+            <img src="IMG/perro blanco y negro.webp" alt="">
         </div>
     </div>
     <hr class="featurette-divider">
     <div class="row featurette">
         <div class="col-md-7">
 
-            <!-- Descripción precisa del objetivo del sitio misión -->
+            <!-- Descripción precisa  misión -->
 
-            <h2 class="featurette-heading">Nuestra misión.</h2>
+            <h2 class="featurette-heading">Nuestra misión.
+                <span class="text-muted">Enchular a Chihuahuas</span>
+            </h2>
             <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really
                 intended to be actually read, simply here to give you a better view of what this would look like with
                 some actual content. Your content.</p>
@@ -94,14 +95,7 @@
                 some actual content. Your content.</p>
         </div>
         <div class="col-md-5">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa"
-                    dy=".3em">500x500</text>
-            </svg>
-
+            <img src="IMG/perro feliz.jpg" alt="">
         </div>
     </div>
     <hr class="featurette-divider">
