hice que nosotros.html sea responsivo para moviles

--- a/nosotros.html
+++ b/nosotros.html
@@ -23,7 +23,7 @@
                 <p class="lead text-muted">
                     En esta página podrás obtener más información sobre la organización detrás de esta empresa. ¡No
                     dudes
-                    en ver nuestra misión, nuestra visión y más!
+                    en ver nuestra misión, visión y más!
                 </p>
             </div>
         </div>
