--- a/index.html
+++ b/index.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>l
+<html lang="es">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400&family=Quicksand:wght@700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/bootstrap.css" />
+
+		<title>Galería de Imágenes</title>
+	</head>
+	<body>
+		<div class="galeria">
+			<div class="foto">
+				<div class="contenedor-modal">
+					<img src="img/1.jpg" alt="" />
+					<div class="overlay">
+						<h2>Crew Demo-2 Mission</h2>
+					</div>
+				</div>
+			</div>
+
+			<div class="foto">
+				<div class="contenedor-modal">
+					<img src="img/2.jpg" alt="" />
+					<div class="overlay">
+						<h2>Crew Demo-2 Mission</h2>
+					</div>
+				</div>
+			</div>
+			<div class="foto">
+				<div class="contenedor-modal">
+					<img src="img/3.jpg" alt="" />
+					<div class="overlay">
+						<h2>Crew Demo-2 Mission</h2>
+					</div>
+				</div>
+			</div>
+			<div class="foto">
+				<div class="contenedor-modal">
+					<img src="img/4.jpg" alt="" />
+					<div class="overlay">
+						<h2>SRC-20 Mission</h2>
+					</div>
+				</div>
+			</div>
+			<div class="foto">
+				<div class="contenedor-modal">
+					<img src="img/5.jpg" alt="" />
+					<div class="overlay">
+						<h2>SRC-19 Mission</h2>
+					</div>
+				</div>
+			</div>
+			<div class="foto">
+				<div class="contenedor-modal">
+					<img src="img/6.jpg" alt="" />
+					<div class="overlay">
+						<h2>Starlink Mission</h2>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
+<script src="js/main.js"></script>
