--- a/index.html
+++ b/index.html
@@ -25,41 +25,41 @@
 
 			<div class="foto">
 				<div class="contenedor-modal">
-					<img src="img/2.jpg" alt="" />
+					<img src="" alt="" />
 					<div class="overlay">
-						<h2>Crew Demo-2 Mission</h2>
+						<h2></h2>
 					</div>
 				</div>
 			</div>
 			<div class="foto">
 				<div class="contenedor-modal">
-					<img src="img/3.jpg" alt="" />
+					<img src=""alt="" />
 					<div class="overlay">
-						<h2>Crew Demo-2 Mission</h2>
+						<h2></h2>
 					</div>
 				</div>
 			</div>
 			<div class="foto">
 				<div class="contenedor-modal">
-					<img src="img/4.jpg" alt="" />
+					<img src="" alt="" />
 					<div class="overlay">
-						<h2>SRC-20 Mission</h2>
+						<h2></h2>
 					</div>
 				</div>
 			</div>
 			<div class="foto">
 				<div class="contenedor-modal">
-					<img src="img/5.jpg" alt="" />
+					<img src="" alt="" />
 					<div class="overlay">
-						<h2>SRC-19 Mission</h2>
+						<h2></h2>
 					</div>
 				</div>
 			</div>
 			<div class="foto">
 				<div class="contenedor-modal">
-					<img src="img/6.jpg" alt="" />
+					<img src="" alt="" />
 					<div class="overlay">
-						<h2>Starlink Mission</h2>
+						<h2></h2>
 					</div>
 				</div>
 			</div>
