MODIFICANDO PAGINA PRINCIPAL

--- a/PRINCIPAL.html
+++ b/PRINCIPAL.html
@@ -11,6 +11,10 @@
 </head>
     <body>
         <nav>
+            <label for="" class="brand">
+                <a href=""><img src="IMG/patitas.jpg" alt=""></a>
+            </label>
+            <a class="navbar-brand">PATITAS</a>
             <button class="x" onclick="accion()">Menú</button>
             <a href="#" class="nav-enlace hide">Inicio</a>
             <a href="#" class="nav-enlace hide">Quienes Somos</a>
