--- a/Galeria.html
+++ b/Galeria.html
@@ -13,7 +13,33 @@
 		<title> Galeria de Fotos </title>
 	</head>
 	
-	<body class="color">
+	<body class="color">	
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<img class="Pat" src="Imagenes/patitas.jpg" alt="">
+			<div class="container-fluid">
+			  <a class="navbar-brand" href="#">PATITAS</a>
+			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+				  <li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Inicio</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Quienes Somos</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Galeria de fotos</a>
+				  </li>
+				</ul>
+			  </div>
+			</div>
+		  </nav>
+
+
+
+		<!--Galeria de pana-->
         <h1 class="gdf">Galeria de Fotos</h1>
 		<div class="galeria">
 			<div class="foto">
@@ -78,9 +104,17 @@
 				</div>
 			</div>
 		</div>
-<div class="container-fluid text-center p-3 ">
-	<p>&copy; Angelo-Milton-Ignacio-Paula @Copyrigth Derechos reservados.</p>
-</div>
+		<div id="footer" class="container-fluid text-center p-3 ">
+			<p>&copy; Angelo-Milton-Ignacio-Paula @Copyright Derechos reservados.</p>
+                <div>
+                    <img src="Imagenes/instagram.png" height="50px">
+                    <img src="Imagenes/facebook_icon_130940.png" height="50px">
+                    <img src="Imagenes/whatsapp.png" height="50px">
+                    
+                </div>
+		</div>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		 integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</body>
 </html>
 <script src="js/main.js"></script>
