--- a/PRINCIPAL.html
+++ b/PRINCIPAL.html
@@ -10,26 +10,28 @@
 
 </head>
     <body>
-        <nav>
-            <label for="" class="brand">
-                <a href=""><img src="IMG/patitas.jpg" alt=""></a>
-            </label>
-            <a class="navbar-brand">PATITAS</a>
-            <button class="x" onclick="accion()">Menú</button>
-            <a href="#" class="nav-enlace hide">Inicio</a>
-            <a href="#" class="nav-enlace hide">Quienes Somos</a>
-            <a href="#" class="nav-enlace hide">Galeria de fotos</a>
-        </nav>
-    
-        <script>
-            function accion(){
-                console.log('it works');
-                var ancla = document.getElementsByClassName('nav-enlace');
-                for(var i = 0; i < ancla.length; i++){
-                    ancla[i].classList.toggle('hide');
-                } 
-            }
-        </script>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<img class="Pat" src="IMG/patitas.jpg" alt="">
+			<div class="container-fluid">
+			  <a class="navbar-brand" href="#">PATITAS</a>
+			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+				  <li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Inicio</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Quienes Somos</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Galeria de fotos</a>
+				  </li>
+				</ul>
+			  </div>
+			</div>
+		  </nav>
 
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
