INCORPORANDO PAGINA QUIENES SOMOS

--- a/nosotros.html
+++ b/nosotros.html
@@ -14,31 +14,28 @@
 
 <body>
     <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Carousel</a>
-          <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="navbar-collapse collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<img class="Pat" src="IMG/patitas.jpg" alt="">
+			<div class="container-fluid">
+			  <a class="navbar-brand" href="#">PATITAS</a>
+			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+				  <li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Inicio</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Quienes Somos</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Galeria de fotos</a>
+				  </li>
+				</ul>
+			  </div>
+			</div>
+		  </nav>
     </header>
 
     <section id="intro" class="py-5 text-center container">
@@ -137,7 +134,15 @@
         </div>
     </section>
 
-    <!-- Falta footer -->
+    <div id="footer" class="container-fluid text-center p-3 ">
+        <p>&copy; Angelo-Milton-Ignacio-Paula @Copyright Derechos reservados.</p>
+            <div>
+                <img src="IMG/instagram.png" height="50px">
+                <img src="IMG/facebook_icon_130940.png" height="50px">
+                <img src="IMG/whatsapp.png" height="50px">
+                
+            </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
