--- a/PRINCIPAL.html
+++ b/PRINCIPAL.html
@@ -20,13 +20,13 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 				  <li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="">Inicio</a>
+					<a class="nav-link" href="">Inicio</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" href="nosotros.html">Quienes Somos</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="">Galeria de fotos</a>
+					<a class="nav-link" href="Galeria.html">Galeria de fotos</a>
 				  </li>
 				</ul>
 			  </div>
