--- a/nosotros.html
+++ b/nosotros.html
@@ -17,20 +17,20 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<img class="Pat" src="IMG/patitas.jpg" alt="">
 			<div class="container-fluid">
-			  <a class="navbar-brand" href="#">PATITAS</a>
+			  <a class="navbar-brand">PATITAS</a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
 			  <div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 				  <li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Inicio</a>
+					<a class="nav-link active" aria-current="page" href="PRINCIPAL.html">Inicio</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" href="#">Quienes Somos</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Galeria de fotos</a>
+					<a class="nav-link" href="Galeria.html">Galeria de fotos</a>
 				  </li>
 				</ul>
 			  </div>
