--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 				  <li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="PRINCIPAL.html">Inicio</a>
+					<a class="nav-link" href="PRINCIPAL.html">Inicio</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" href="#">Quienes Somos</a>
