--- a/PRINCIPAL.html
+++ b/PRINCIPAL.html
@@ -60,7 +60,7 @@
             </button>
         </div>
 
-        <section class="container flex"> 
+        <section id="bloques" class="container flex"> 
 
             <div class="parrafo">
                 <h3 class="titulo"> ¡BIENVENIDO!</h3>
